# formcheck

./: .env.example  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml  requirements.txt
examples/: advanced.py  basic.py
src/: __main__.py  core.py  health.py  utils.py
src/formcheck/: __init__.py  cli.py  models.py  report.py  simulator.py
src/formcheck/exercises/: __init__.py  database.py  rep_counter.py  workout.py
src/formcheck/pose/: __init__.py  analyzer.py  corrector.py  detector.py
tests/: test_analyzer.py  test_benchmark.py  test_core.py  test_corrector.py  test_database.py  test_integration.py  test_models.py  test_rep_counter.py  test_simulator.py  test_workout.py
